<resources>
    <string name="app_name">FindMyPet</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_your_password_placeholder">Enter your password</string>
    <string name="enter_your_email_placeholder">Enter your email</string>
    <string name="signin_button">SignIn</string>
    <string name="signup_button">SignUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="missing_found">Missing/Found</string>
    <string name="pet_profile">Pet Profiles</string>
    <string name="add">Add</string>
    <string name="add_photo">Add photo</string>
    <string name="name">Name</string>
    <string name="enter_pet_name">Enter pet name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <string name="enter_pet_age">Enter pet age</string>
    <string name="enter_pet_gender">Enter pet gender</string>
    <string name="enter_pet_species">Enter pet species</string>
    <string name="enter_pet_breed">Enter pet breed</string>
    <string name="enter_pet_microchip_number">Enter pet microchip number</string>
    <string name="enter_pet_description">Enter pet description</string>
    <string name="save_button">Save button</string>
    <string name="enter_the_last_location_of_the_pet">Enter the last location of the pet</string>
    <string name="enter_pet_information">Enter pet informations</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="choose_pet_profile">Choose pet profile</string>
    <string name="last_known_location">Last known location</string>
    <string name="pet_description">Pet description</string>
    <string name="show_on_map">Show on map</string>
    <string name="phone_number">Phone number</string>
    <string name="write_to_nfc_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device</string>
    <string name="message_tag_detected">Tag detected!</string>
    <string name="message_read_success">Announcement found!</string>
    <string name="message_read_error">Announcement not found</string>
    <string name="message_write_progress">Writing to nfc tag…</string>
    <string name="message_write_success">Successfully written to Tag!</string>
    <string name="message_write_error">Error Writing Tag !</string>
    <string name="message_read_tag">Read from NFC tag</string>
    <string name="reading_nfc_tag">Reading NFC Tag</string>
    <string name="add_lost_pet_announcement">Add Lost Pet Announcement</string>
    <string name="add_found_pet_announcement">Add Found Pet Announcement</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="sorting_by_date">Sorting by date</string>
    <string name="sorting_descending_by_date">Sorting descending by date</string>
    <string name="sorting_ascending_by_date">Sorting ascending by date</string>
    <string name="lost_fab">Lost</string>
    <string name="found_fab">Found</string>
    <string name="announcement_fab">Announcement</string>
    <string name="click_to_enter_the_date">Click to enter the date</string>
    <string name="click_to_enter_a_location">Click to enter the location</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="search_for_ann_in_region">Szukaj ogłoszenia w okolicach</string>
    <string name="numer_mikroczipa">Numer mikroczipa</string>
    <string name="gatunek">Gatunek</string>
    <string name="data_dodania_ogloszenia">Data dodania ogłoszenia</string>
    <string name="plec">Płeć</string>
    <string name="no_data_available">\We couldn\'t find any announcements\</string>
    <string-array name="gender_array">
        <item>Samiec</item>
        <item>Samica</item>
    </string-array>
    <string-array name="gender_filter_array">
        <item>Wszystkie</item>
        <item>Samiec</item>
        <item>Samica</item>
    </string-array>
    <string-array name="announcement_filter_type">
        <item>Wszystkie</item>
        <item>Znaleziony</item>
        <item>Zaginiony</item>
    </string-array>
    <string-array name="announcement_filter_date">
        <item>Wszystkie</item>
        <item>Ost. 7 dni</item>
        <item>Ost. 30 dni</item>
        <item>Ost. 3 miesiące</item>
        <item>Ost. 6 miesiące</item>
    </string-array>
</resources>