<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_missing_found"
            android:icon="@drawable/ic_list"
            android:title="@string/missing_found" />
        <item
            android:id="@+id/nav_pet_profile"
            android:icon="@drawable/ic_pet_profile"
            android:title="@string/pet_profile" />

        <item
            android:id="@+id/nfc_read_button_main"
            android:icon="@drawable/ic_nfc"
            android:title="@string/reading_nfc_tag" />

        <item
            android:id="@+id/logout_button_main"
            android:icon="@drawable/common_google_signin_btn_icon_light"
            android:title="@string/logout" />

    </group>
</menu>